[package]
name = "ruforge"
version = "0.1.0"
authors = ["Scotow <contact@scotow.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
rayon = "1.3.0"
rand = "0.7.3"
clap = "2.33.0"
num_cpus = "1.12.0"